# picophone-py

./: .gitignore  LICENSE  README.md  pyproject.toml  setup_cxfreeze.py
docs/: PicoPhone-Py.odt
picophone/: __init__.py  __main__.py  autostart.py  call.py  config.py  crypto.py  log.py
picophone/audio/: aec.py  dfn_onnx.py  engine.py
picophone/net/: discovery.py  media.py  signaling.py  stun.py
picophone/ui/: chat_window.py  main_window.py  prefs_dialog.py  skin.qss
scripts/: Dockerfile.mageia  build_linux.sh  build_mageia.sh  build_sfx.py  build_windows.bat  debug_aec.py  generate_docs.py  prune_dist.py  smoke_aec.py  smoke_aec_doubletalk.py  smoke_call_localhost.py  smoke_chat.py  smoke_discovery.py  smoke_engine_to_engine.py  smoke_gui.py  smoke_keyx.py  smoke_media.py  smoke_signaling.py
